# claude-sandbox

./: .gitignore  .mcp.json  Containerfile  Makefile  README.md  claude-sandbox
.github/workflows/: container.yml  release.yml
claude-sandbox/: Cargo.toml
claude-sandbox/src/: clipboard_proxy.rs  gh_proxy.rs  git_proxy.rs  logging.rs  main.rs  ssh_proxy.rs
config/: AGENTS.claude.md  AGENTS.md  CLAUDE.md  clipboard-proxy-client.js  codex.toml  entrypoint.sh  gh-proxy-client.js  git-proxy-client.js  git-wrapper.sh  mcp.json  opencode.json  ssh-proxy-client.js  starship.toml  start-display.sh  t3code-pair-admin.js  t3code-register.sh  t3codes-bootstrap-server.js  t3codes-hub.sh  wrap.sh
skills/git/: SKILL.md
skills/github-actions/: SKILL.md
skills/gui/: SKILL.md
skills/readme/: SKILL.md
skills/rust/: SKILL.md
skills/wrap/: SKILL.md
