[package]
name = "claude-sandbox"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13", features = ["blocking"] }
flate2 = "1"
tar = "0.4"
dialoguer = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
filetime = "0.2"

[profile.release]
strip = true
lto = true
